Changed page title

--- a/java-spring-boot/index.html
+++ b/java-spring-boot/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/styles/prism.css">
     <script src="../assets/scripts/prism.js"></script>
     <script src="../assets/scripts/script.js"></script>
-    <title>1 pamoka. HTML žymės.</title>
+    <title>Spring Boot projekto planas ir nurodymai. Žingsnis po žingsnį.</title>
 </head>
 <body>
     <div class="page-container">
