Renamed section to entity part; therefore separating entity and repository into different ssections

--- a/java-spring-boot/index.html
+++ b/java-spring-boot/index.html
@@ -62,7 +62,7 @@ spring.jpa.hibernate.ddl-auto=update
 
             <div class="section">
                 <div class="section-header">
-                    <h3 id="section2">Model package dalis</h3>
+                    <h3 id="section2">Model package. Entity dalis</h3>
                 </div>
                 <div class="theory-text">
                     <li>projekto-pavadimimas package (jūsų bus tiesiog koks projekto pavadinimas) susikuriame model package <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-spring-boot/screenshot5.jpg" alt="Kodo foto"></div></span></li>
