--- a/java-spring-boot/index.html
+++ b/java-spring-boot/index.html
@@ -514,59 +514,10 @@ public class Vartotojas {
 
             <div class="section">
                 <div class="section-header">
-                    <h3 id="section1">Model package repository klasės.</h3>
+                    <h3 id="section1">Controller package ReceptasController klasė</h3>
                 </div>
                 <div class="theory-text">
-                    <li>Kai susikūrėme visas (arba pradžiai reikalingas) Entity klases, reikia joms sukurti atitinkamus Repository interfeisus. Kadangi Entity klasėse saugojama "lentelių struktūra", o Repository interfeisuose saugojami veiksmai ir užklausos (gavimo, įdėjimo) su tomis lentelėmis.</li>
-                    <li>Pradedame nuo ReceptasRepository interface dalies</li>
-                    <li>Repository package dalyje kuriame ReceptasRepository interface (taip pat kaip klasę) <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-spring-boot/screenshot15.jpg" alt="Kodo foto"></div></span></li>
-                    <li>Prirašome žymėjima, jog tai yra @Repository, bei pasakome, jog ištas Interface extendina JpaRepository - tai reiškia, jog šitas mūsų interface yra padarytas pagal JpaRepository principą. Toliau tarp mažiau ir daugiau ženklų įrašome klasę kuriai darome šią repository (Receptas) ir koks tos klasės id kintamojo tipas (long id, todėl Long, jeigu bus int id, tai bus Integer) <div class="spoiler">
-                        <div class="spoiler-content">
-                            <pre><code class="language-java">package lt.imones.puslapis.projektopavadinimas.model.repository;
-
-import lt.imones.puslapis.projektopavadinimas.model.entity.Receptas;
-import org.springframework.data.jpa.repository.JpaRepository;
-import org.springframework.stereotype.Repository;
-
-@Repository
-public interface ReceptasRepository  extends JpaRepository&lt;Receptas, Long&gt; {
-    
-}
-
-                            </code></pre>
-                        </div>
-                        <div class="spoiler-button">
-                            <button></button>
-                        </div>
-                    </div></li>
-                    <li>Kai turime pradžią, galime pradėti "generuoti" metodus. Metodų generavimas yra paremtas tiesisog metodo vardo ir parametrų užrašymu. Yra tam tikri šablonai pagal kuriuos sukūrę metodo pavadinimą mes jau turėsime veikiantį metodą. Apie juos galite pasiskaityti išsamiau čia: <a href="https://docs.spring.io/spring-data/jpa/docs/1.5.0.RELEASE/reference/html/jpa.repositories.html">https://docs.spring.io/spring-data/jpa/docs/1.5.0.RELEASE/reference/html/jpa.repositories.html</a>  </li>
-                    <li>Trumpai apibendrinant, jeigu reikia kažką gauti išduomenų bazės: iš pradžių reikia pagalvoti ar gausim kelis ar tik vieną objektą. Pavyzdžiui, jei reikia rasti receptuos nuo 5 iki 10 eurų, tai gausime kelis receptus, todėl tai turėtų grąinti List&lt;Receptass&gt;, o jeigu pavyzdžiui reikia grąžinti brangiausią receptą - tai reikėtų grąžinti tik vieną receptą, todėl grąžins vieną Receptas klasės objektą. Kai nusprendėte ką grąžins, pradėkite funkcijos užrašą nuo duomenų tipo (tai arba list arba paprastas objektas) ir toliau pradedame konstruoti pavadinimą. Pradedame nuo žodžio "find", kuris reiškia rasti. Toliau rašome "By", kuris reiškia pagal. Toliau turime įrašyti stulpelio pavadinimą pagal kurį ieškotume, tai jeigu ieškotume recepto pagal pavadinimą rašytume findByPavadinimas(), jeigu ieškotume pagal id, rašytume findById(). Toliau, reikia kažką paduoti metodui per parametrus. Kadangi, kaip jis gali ieškoti recepto, jeigu jis negaus to recepto pavadinimo. Todėl galutinis užrašas turėtų atrodyti: Receptas findByPavadinimas(String pavadinimas). Jeigu reikėtų ieškoti receptų tam tikram intervale galima naudoti Between raktažodį (jis yra tame puslapyje, kur surašyti visi) ir taip galime užrašyti metodą: List&lt;Receptas&gt; findByKainaBetween(double pradineKaina, double galutineKaina)</li>
-                    <li>Taigi gavimo funkcijų (pagal pavadinimą ir pagal tarp kainų tam tikrų) užrašymas turėtų atrodyti štai taip: <div class="spoiler">
-                        <div class="spoiler-content">
-                            <pre><code class="language-java">package lt.imones.puslapis.projektopavadinimas.model.repository;
-
-import lt.imones.puslapis.projektopavadinimas.model.entity.Receptas;
-import org.springframework.data.jpa.repository.JpaRepository;
-import org.springframework.stereotype.Repository;
-
-import java.util.List;
-
-@Repository
-public interface ReceptasRepository  extends JpaRepository&lt;Receptas, Long&gt; {
-
-    Receptas findByPavadinimas(String pavadinimas);
-
-    List&lt;Receptas&gt; findByKainaBetween(double pradineKaina, double galutineKaina);
-
-}
-
-                            </code></pre>
-                        </div>
-                        <div class="spoiler-button">
-                            <button></button>
-                        </div>
-                    </div> </li>
-
+                    
                 </div>
             </div>
         </div>
